[package]
name = "raft"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.1", features = [ "full" ] }
futures = "0.3"
tarpc = { version = "0.26", features = [ "full" ] }
tokio-serde = { version = "0.8", features = [ "json" ]}

[[bin]]
name = "raft"
path = "src/main.rs"
